feat(core): implement core crate - events, pipeline, config, errors, types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ anyhow = "1"
 thiserror = "2"
 clap = { version = "4", features = ["derive"] }
 bytes = "1"
+toml = "0.8"
+uuid = { version = "1", features = ["v4"] }
 
 [profile.dev]
 panic = "abort"
