--- a/crates/ebpf-engine/Cargo.toml
+++ b/crates/ebpf-engine/Cargo.toml
@@ -6,10 +6,15 @@ description = "Ironpost eBPF 기반 네트워크 패킷 탐지 엔진"
 
 [dependencies]
 ironpost-core = { path = "../core" }
+ironpost-ebpf-common = { path = "ebpf-common" }
 tokio = { workspace = true }
 tracing = { workspace = true }
-clap = { workspace = true }
 bytes = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+uuid = { workspace = true }
+toml = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 aya = "0.13"
+aya-log = "0.2"
