--- a/crates/ebpf-engine/Cargo.toml
+++ b/crates/ebpf-engine/Cargo.toml
@@ -6,7 +6,7 @@ description = "Ironpost eBPF 기반 네트워크 패킷 탐지 엔진"
 
 [dependencies]
 ironpost-core = { path = "../core" }
-ironpost-ebpf-common = { path = "ebpf-common" }
+ironpost-ebpf-common = { path = "ebpf-common", features = ["user"] }
 tokio = { workspace = true }
 tracing = { workspace = true }
 bytes = { workspace = true }
@@ -18,3 +18,6 @@ toml = { workspace = true }
 [target.'cfg(target_os = "linux")'.dependencies]
 aya = "0.13"
 aya-log = "0.2"
+
+[dev-dependencies]
+tempfile = "3.14"
