--- a/crates/ebpf-engine/ebpf-common/Cargo.toml
+++ b/crates/ebpf-engine/ebpf-common/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 description = "Ironpost eBPF 커널/유저스페이스 공유 타입 (#![no_std])"
 
+[features]
+default = []
+user = ["aya"]
+
 [dependencies]
-# no_std — 외부 의존성 없음
+aya = { version = "0.13", optional = true, default-features = false }
