feat(sbom-scanner): SBOM 생성 및 CVE 취약점 스캔 엔진
- 의존성 파서: Cargo.lock, package-lock.json
- SBOM 생성: CycloneDX 1.5, SPDX 2.3 JSON 출력
- CVE 매칭: 로컬 JSON DB, SemVer 범위 매칭, 심각도 분류
- Alert 생성: Critical/High 취약점 발견 시 이벤트 발신
- 리뷰 수정: C3건 + H5건 (DB 크기 제한, O(1) 인덱싱, TOCTOU 제거, 코드 중복 제거, graceful shutdown, 경로 검증)
- 183개+ 테스트, clippy 클린, unwrap/as 0건

--- a/crates/sbom-scanner/Cargo.toml
+++ b/crates/sbom-scanner/Cargo.toml
@@ -15,8 +15,8 @@ thiserror = { workspace = true }
 uuid = { workspace = true }
 
 # SemVer version comparison
-semver = "1"
+semver = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
-tempfile = "3"
+tempfile = { workspace = true }
