--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ clap = { version = "4", features = ["derive"] }
 bytes = "1"
 toml = "0.8"
 uuid = { version = "1", features = ["v4"] }
+semver = "1"
+tempfile = "3"
 
 [profile.dev]
 panic = "abort"
