Phase 7 데모 설정/문서 정합성 수정 및 컨테이너 정책 런타임 로딩 적용

--- a/docker/demo/policies/isolate-db-network-on-medium.toml
+++ b/docker/demo/policies/isolate-db-network-on-medium.toml
@@ -11,4 +11,4 @@ image_patterns = ["postgres:*", "mysql:*", "mariadb:*"]
 labels = []
 
 [action.NetworkDisconnect]
-networks = ["ironpost-net"]
+networks = ["ironpost-network"]
