fix(demo): Update container names and image patterns for database network isolation

--- a/docker/demo/policies/isolate-db-network-on-medium.toml
+++ b/docker/demo/policies/isolate-db-network-on-medium.toml
@@ -6,8 +6,8 @@ severity_threshold = "Medium"
 priority = 20
 
 [target_filter]
-container_names = ["postgres-*", "mysql-*"]
-image_patterns = ["postgres:*", "mysql:*", "mariadb:*"]
+container_names = ["ironpost-postgres*", "ironpost-redis*"]
+image_patterns = ["postgres:*", "redis:*"]
 labels = []
 
 [action.NetworkDisconnect]
