--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,3 +13,6 @@ tracing = { workspace = true }
 bytes = { workspace = true }
 toml = { workspace = true }
 uuid = { workspace = true }
+
+[dev-dependencies]
+serial_test = { workspace = true }
