docs: add design-decisions, benchmarks, getting-started
- docs/design-decisions.md: 10 ADRs (Rust-only, Aya, monorepo, etc.)
- docs/benchmarks.md: criterion 실측 벤치마크 결과
- docs/getting-started.md: 설치부터 첫 실행까지 튜토리얼
- criterion 벤치마크 코드 (5 bench files across crates)

--- a/crates/container-guard/Cargo.toml
+++ b/crates/container-guard/Cargo.toml
@@ -17,3 +17,8 @@ bollard = "0.18"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
+criterion = { workspace = true }
+
+[[bench]]
+name = "policy_bench"
+harness = false
