--- a/crates/sbom-scanner/Cargo.toml
+++ b/crates/sbom-scanner/Cargo.toml
@@ -21,3 +21,8 @@ semver = { workspace = true }
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
 tempfile = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name = "scanner_bench"
+harness = false
