--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ uuid = { version = "1", features = ["v4"] }
 semver = "1"
 tempfile = "3"
 serial_test = "3"
+criterion = { version = "0.5", features = ["html_reports"] }
 
 [profile.dev]
 panic = "abort"
