--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,3 +16,8 @@ uuid = { workspace = true }
 
 [dev-dependencies]
 serial_test = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name = "event_bench"
+harness = false
