--- a/crates/log-pipeline/Cargo.toml
+++ b/crates/log-pipeline/Cargo.toml
@@ -27,3 +27,12 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio = { workspace = true, features = ["test-util", "macros"] }
 tempfile = "3"
 proptest = "1"
+criterion = { workspace = true }
+
+[[bench]]
+name = "parser_bench"
+harness = false
+
+[[bench]]
+name = "rule_bench"
+harness = false
