feat: Prometheus 메트릭 수집 및 Grafana 모니터링 구성 추가
- core에 메트릭 상수/설명 등록 모듈(metrics.rs)과 MetricsConfig 설정 추가

- daemon에 metrics-exporter-prometheus 기반 /metrics 서버 설치 및 오케스트레이터 연동

- ebpf/log-pipeline/container-guard/sbom-scanner에 주요 카운터·게이지·히스토그램 계측 추가

- Docker Compose에 Prometheus/Grafana 프로비저닝 및 대시보드 3종(overview, security, log-pipeline) 추가

- metrics 관련 통합 테스트와 설계/리뷰 문서(.tasks/.reviews) 반영

--- a/crates/container-guard/Cargo.toml
+++ b/crates/container-guard/Cargo.toml
@@ -14,6 +14,7 @@ tracing = { workspace = true }
 thiserror = { workspace = true }
 uuid = { workspace = true }
 bollard = "0.18"
+metrics = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
