--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ semver = "1"
 tempfile = "3"
 serial_test = "3"
 criterion = { version = "0.5", features = ["html_reports"] }
+metrics = "0.24"
+metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
 
 [profile.dev]
 panic = "abort"
