--- a/crates/log-pipeline/Cargo.toml
+++ b/crates/log-pipeline/Cargo.toml
@@ -14,6 +14,7 @@ tracing = { workspace = true }
 thiserror = { workspace = true }
 bytes = { workspace = true }
 uuid = { workspace = true }
+metrics = { workspace = true }
 
 # YAML rule parsing
 serde_yaml = "0.9"
