--- a/crates/sbom-scanner/Cargo.toml
+++ b/crates/sbom-scanner/Cargo.toml
@@ -14,6 +14,7 @@ toml = { workspace = true }
 tracing = { workspace = true }
 thiserror = { workspace = true }
 uuid = { workspace = true }
+metrics = { workspace = true }
 
 # SemVer version comparison
 semver = { workspace = true }
