보안 퍼징 리뷰 반영: 패닉 제거·CI 실패 감지 강화
- sbom_roundtrip 퍼즈 타겟의 UTF-8 경계 슬라이싱/expect 패닉 제거

- fuzz 워크플로우 최소 권한 설정 및 타겟 실패 시 즉시 실패 처리

- README의 실행/재현 명령과 예제 코드 불일치 수정

- syslog 멀티바이트 경계 회귀 테스트 1건 추가

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 2 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -51,7 +54,6 @@ jobs:
         run: |
           cd fuzz
           cargo +nightly fuzz run -s none ${{ matrix.target }} -- -max_total_time=300
-        continue-on-error: true
 
       # Check for crashes and upload as artifacts
       - name: Upload crash artifacts for ${{ matrix.target }}
