chore: simplify target ignore patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 # Rust / Cargo
-/target/
-/fuzz/target/
+**/target/
 **/*.rs.bk
 *.pdb
 Cargo.lock
 
 # eBPF build artifacts
-crates/ebpf-engine/ebpf/target/
 *.o
 *.bpf.o
 
